# easyhttpmock

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Cargo.toml  README.md  output.txt
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: code-coverage.yml  rust.yml
.samoyed/: pre-commit
certs/: README.md  client.cnf  client.crt  client.key  client.key.der  client.p12  server.cnf  server.crt  server.key
docs/: _config.yml  easyhttpmock-vetis-smol.md  easyhttpmock-vetis-tokio.md  easyhttpmock.md  index.md  llms.txt
easyhttpmock/: Cargo.toml  README.md
easyhttpmock-vetis-compio/: Cargo.toml  README.md
easyhttpmock-vetis-compio/src/: lib.rs  vetis_adapter.rs
easyhttpmock-vetis-compio/src/tests/: mod.rs
easyhttpmock-vetis-smol/: Cargo.toml  README.md
easyhttpmock-vetis-smol/src/: lib.rs  vetis_adapter.rs
easyhttpmock-vetis-smol/src/tests/: mod.rs
easyhttpmock-vetis-tokio/: Cargo.toml  README.md
easyhttpmock-vetis-tokio/src/: lib.rs  vetis_adapter.rs
easyhttpmock-vetis-tokio/src/tests/: mod.rs
easyhttpmock/src/: config.rs  errors.rs  expect.rs  lib.rs  mock.rs  server.rs
easyhttpmock/src/matchers/: and.rs  body.rs  header.rs  method.rs  mod.rs  or.rs  path.rs  query.rs
easyhttpmock/src/tests/: config.rs  http.rs  mock.rs  mod.rs  server.rs
examples/simple/: Cargo.toml
examples/simple/certs/: client.der
examples/simple/src/: main.rs
src/: config.rs  errors.rs  lib.rs
src/server/: mod.rs
src/server/adapters/: vetis_adapter.rs
src/tests/: config.rs  mod.rs  server.rs
