[package]
name = "easyhttpmock"
version = "0.1.3-beta.1"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/easyhttpmock"
homepage = "https://github.com/ararog/easyhttpmock"
description = "EasyHttpMock is a simple HTTP mock server for testing HTTP clients."
readme = "README.md"
license = "MIT"
keywords = ["http", "mock", "testing"]
publish = true
rust-version = "1.75.0"

[features]
default = ["tokio-rt", "http2", "tokio-rust-tls"]

tokio-rt = ["vetis/tokio-rt", "vetis/__deboa_tokio"]
smol-rt = ["vetis/smol-rt", "vetis/__deboa_smol"]

tokio-rust-tls = ["vetis/tokio-rust-tls"]
smol-rust-tls = ["vetis/smol-rust-tls"]

http1 = ["vetis/http1"]
http2 = ["vetis/http2"]
http3 = ["vetis/http3"]

[dependencies]
bytes = "1.11.0"
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = "0.1.9"
rand = "0.9.2"
thiserror = "2.0.17"
tokio = { version = "1.0", features = ["full"] }
vetis = { version = "0.1.4-beta.4", optional = true, default-features = false }
