[workspace]
# Use the latest resolver available
resolver = "3"
# Include both parts of the library in the workspace
members = [
  "easyhttpmock",
  "easyhttpmock-vetis-smol",
  "easyhttpmock-vetis-tokio",
]

[workspace.package]
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/easyhttpmock"
homepage = "https://github.com/ararog/easyhttpmock"
readme = "README.md"
license = "MIT OR Apache-2.0"
rust-version = "1.75.0"

[workspace.dependencies]
easyhttpmock = { path = "easyhttpmock" }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
