[package]
name = "easyhttpmock-vetis-compio"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "EasyHttpMock adapter for Vetis HTTP server using compio runtime."
readme = "README.md"
license.workspace = true
keywords = ["http", "mock", "testing"]
publish = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = ["http2"]

xml = ["easyhttpmock/xml"]
json = ["easyhttpmock/json"]
http1 = ["vetis-compio/http1"]
http2 = ["vetis-compio/http2"]
http3 = ["vetis-compio/http3"]

rust-tls = ["vetis-compio/rust-tls"]

[dependencies]
caramelo = "0.1.1-beta.2"
easyhttpmock = { workspace = true }
http = "1.4.0"
http-body-util = "0.1.3"
rand = { version = "0.10.0", default-features = false }
compio = { version = "0.19.1", default-features = false, features = ["macros"] }
vetis-compio = { version = ">= 0.1.0-beta.2", features = [
  "http2",
  "rust-tls",
], default-features = false }
send_wrapper = "0.6.0"

[dev-dependencies]
deboa = { version = ">= 0.1.0-beta.22" }
deboa-compio = { version = ">= 0.1.1-beta.4", default-features = false, features = [
  "http2",
  "rust-tls",
  "default-rustls-provider",
  "default-rustls-verifier",
] }
compio = { version = "0.19.1", default-features = false, features = ["macros"] }
