[package]
name = "easyhttpmock-vetis-smol"
version = "0.1.0-beta.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "EasyHttpMock adapter for Vetis HTTP server using smol runtime."
readme = "README.md"
license.workspace = true
keywords = ["http", "mock", "testing"]
publish = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
http1 = ["vetis-smol/http1"]
http2 = ["vetis-smol/http2"]
http3 = ["vetis-smol/http3"]

rust-tls = ["vetis-smol/rust-tls"]

[dependencies]
easyhttpmock = { workspace = true }
googletest = "0.14.2"
http = "1.4.0"
macro_rules_attribute = "0.2.2"
rand = "0.9.2"
smol-macros = "0.1.1"
vetis-smol = { path = "../../vetis/vetis-smol", features = [
  "http2",
  "rust-tls",
], default-features = false }

[dev-dependencies]
smol = { version = "2.0.2", default-features = false }
smol-macros = { version = "0.1.1", default-features = false }
