[package]
name = "easyhttpmock-vetis-smol"
version = "0.1.0-beta.8"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "EasyHttpMock adapter for Vetis HTTP server using smol runtime."
readme = "README.md"
license.workspace = true
keywords = ["http", "mock", "testing"]
publish = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
xml = ["easyhttpmock/xml"]
json = ["easyhttpmock/json"]
http1 = ["vetis-smol/http1"]
http2 = ["vetis-smol/http2"]
http3 = ["vetis-smol/http3"]

rust-tls = ["vetis-smol/rust-tls"]

[dependencies]
caramelo = "0.1.1-beta.2"
easyhttpmock = { workspace = true }
http = "1.4.0"
http-body-util = "0.1.3"
macro_rules_attribute = "0.2.2"
rand = { version = "0.10.0", default-features = false }
smol = { version = "2.0.2", default-features = false }
smol-macros = { version = "0.1.1", default-features = false }
vetis-smol = { version = ">= 0.1.0-beta.7", features = [
  "http2",
  "rust-tls",
], default-features = false }

[dev-dependencies]
deboa = ">= 0.1.0-beta.25"
deboa-smol = { version = ">= 0.1.0-beta.15", default-features = false, features = [
  "http2",
  "rust-tls",
  "default-rustls-provider",
  "default-rustls-verifier",
] }
smol = { version = "2.0.2", default-features = false }
smol-macros = { version = "0.1.1", default-features = false }
