[package]
name = "easyhttpmock-vetis-tokio"
version = "0.1.0-beta.8"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "EasyHttpMock adapter for Vetis HTTP server using tokio runtime."
readme = "README.md"
license.workspace = true
keywords = ["http", "mock", "testing"]
publish = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
xml = ["easyhttpmock/xml"]
json = ["easyhttpmock/json"]
http1 = ["vetis-tokio/http1"]
http2 = ["vetis-tokio/http2"]
http3 = ["vetis-tokio/http3"]

rust-tls = ["vetis-tokio/rust-tls"]

[dependencies]
caramelo = "0.1.1-beta.2"
easyhttpmock = { workspace = true }
http = "1.4.0"
http-body-util = "0.1.3"
rand = { version = "0.10.0", default-features = false }
tokio = { version = "1.50.0", default-features = false }
vetis-tokio = { version = ">= 0.1.0-beta.7", features = [
  "http2",
  "rust-tls",
], default-features = false }

[dev-dependencies]
deboa = ">= 0.1.0-beta.25"
deboa-tokio = { version = ">= 0.1.0-beta.15", default-features = false, features = [
  "http2",
  "rust-tls",
  "default-rustls-provider",
  "default-rustls-verifier",
] }
tokio = { version = "1.50.0", default-features = false, features = ["macros"] }
