[package]
name = "easyhttpmock"
version = "0.1.3-beta.9"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "EasyHttpMock is a simple HTTP mock server for testing HTTP clients."
readme = "README.md"
license.workspace = true
keywords = ["http", "mock", "testing"]
publish = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]

[dependencies]
bytes = "1.11.0"
caramelo = "0.1.0"
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = "0.1.9"
rand = "0.10.0"
thiserror = "2.0.17"
