[package]
name = "easyhttpmock"
version = "0.1.3-beta.13"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "EasyHttpMock is a simple HTTP mock server for testing HTTP clients."
readme = "README.md"
license.workspace = true
keywords = ["http", "mock", "testing"]
publish = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = ["json", "xml"]
json = ["dep:sonic-rs", "dep:serde_json", "dep:jsonpath-rust"]
xml = ["dep:simdxml", "dep:serde", "dep:serde-xml-rs"]

[dependencies]
bytes = "1.11.0"
caramelo = { version = "0.1.1-beta.2", default-features = false }
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["full"] }
hyper-util = "0.1.9"
jsonpath-rust = { version = "1.0.4", optional = true }
once_cell = "1.21.4"
rand = "0.10.0"
regex = "1.12.4"
serde = { version = "1.0.219", optional = true }
serde-xml-rs = { version = "0.8.2", optional = true }
serde_json = { version = "1.0.150", optional = true }
simdxml = { version = "0.2.1", optional = true }
sonic-rs = { version = "0.5.8", optional = true }
thiserror = "2.0.17"
